force-app/main/default/objects/Warranty_Registration__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warranty Registrations</relationshipLabel>
    <relationshipName>Warranty_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>